--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Ignore all terraform.tfstate files
+terraform.tfstate
+terraform.tfstate.*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
