Remove deprecated IPAM scripts and update environment configurations
- Deleted `check-ip.sh` and `test-destroy-logic.sh` scripts as they are no longer needed.
- Updated `README.md` to reflect changes in IPAM integration and added new usage instructions for the `create-environment.sh` script.
- Introduced new scripts for environment creation and fixing missing Proxmox provider variables.
- Updated provider version constraints across all environments to ensure consistency.
- Added new configuration files for Docker Compose and PHPIPAM setup.

--- a/environments/ipam/configs/docker-compose.yml
+++ b/environments/ipam/configs/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - phpipam-logo:/phpipam/css/images/logo
       - phpipam-ca:/usr/local/share/ca-certificates:ro
+      - ./config/config.dist.php:/phpipam/config.dist.php:ro
     depends_on:
       - phpipam-mariadb
 
