Add new environment configuration for stagge with IPAM integration
- Introduced `main.tf`, `provider.tf`, `provision.tf`, and `variables.tf` for the stagge environment.
- Added symlink for `ipam-config.tf` to centralize IPAM settings.
- Updated `Taskfile.yml` to include new scripts for environment creation and IPAM testing.
- Defined variables for Proxmox API access and VM configurations, including IPAM settings.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -40,3 +40,13 @@ tasks:
     cmds:
       - gum style "task {{.CHOICE}}" --border=rounded --padding="0 1"
       - task -t {{.ROOT_TASKFILE}} "{{.TASK}}"
+
+  scripts:env:
+    desc: Create a new environment using the create-environment script
+    cmds:
+      - ./scripts/create-environment.sh
+
+  scripts:test-ipam:
+    desc: Test IPAM API using the test-ipam-api script
+    cmds:
+      - ./scripts/test-ipam-api.sh
